<resources>
    <string name="app_name">تعليم لايف</string>
    <string name="field_req">الحقل مطلوب</string>
    <string name="login">تسجيل دخول</string>
    <string name="code">الكود</string>
    <string name="phone">رقم الهاتف</string>
    <string name="are_you_have_account">ليس لدي حساب ؟</string>
    <string name="upload_profile_photo">رفع صورة</string>
    <string name="email">البريد الالكتروني</string>
    <string name="accept">الموافقة</string>
    <string name="terms_and_conditions">الشروط والاحكام</string>
    <string name="enter_verification_code">ادخل كود التحقق</string>
    <string name="confirm">تأكيد</string>
    <string name="share_app">مشاركة</string>
    <string name="rate_app">تقييم التطبيق</string>
    <string name="logout">خروج</string>
    <string name="about_app">عن التطبيق</string>
    <string name="notifications">الإشعارات</string>
    <string name="wait">انتظر</string>
    <string name="home">الرئيسية</string>
    <string name="profile">حسابي</string>
    <string name="more">المذيد</string>
    <string name="field_required">الحقل مطلوب</string>
    <string name="inv_email">البريد الالكتروني غير صحيح</string>
    <string name="cannot_signup">لا يمكن انشاء حساب دون الموافقة الشروط والاحكام</string>
    <string name="gallery">معرض الصور</string>
    <string name="camera">الكاميرا</string>
    <string name="perm_image_denied">الوصول الى الصور مرفوض</string>
    <string name="privacy">سياسة الخصوصية</string>
    <string name="upload_image">رفع صورة</string>
    <string name="select_image_to_upload">إختر صورة لرفعها</string>
    <string name="cancel">إلغاء</string>
    <string name="sign_up">إنشاء حساب</string>
    <string name="failed">يوجد مشكلة وجار العمل عليها</string>
    <string name="ch_skill">إختر المهارات</string>
    <string name="edit_profile">تعديل الملف الشخصي</string>
    <string name="ok">أقبل</string>
    <string name="skip">تخطى</string>
    <string name="just_now">الان</string>
    <string name="a_minute_ago">منذ د</string>
    <string name="min">min</string>
    <string name="an_hour_ago">منذ س</string>
    <string name="hs">س</string>
    <string name="yesterday">امس</string>
    <string name="video">تم إرسال فيديو</string>
    <string name="voice">رسالة صوتية</string>
    <string name="image">تم إرسال صورة</string>
    <string name="something">تحقق من الاتصال بالانترنت</string>
    <string name="back">رجوع</string>
    <string name="refuse">رفض</string>
    <string name="no_requests">لا توجد طلبات</string>
    <string name="req_refused">تم رفض طلبك</string>
    <string name="req_accepted">تم قبول الطلب</string>
    <string name="no_conversation">لا توجد محادثات</string>
    <string name="next">التالي</string>
    <string name="forget_password">نسيت كلمة المرور ؟</string>
    <string name="sign_up1"><![CDATA[ هل تريد تسجل حساب جديد ؟<font color="#FC6D67">سجل هنا</font>]]></string>
    <string name="country_code">كود الدولة</string>
    <string name="confirmation_code">كود التحقق</string>
    <string name="enter_code_sent_to">ادخل الكود المرسل الى</string>
    <string name="Confirm">تحقق</string>
    <string name="inv_code">الكود غير صحيح</string>
    <string name="resend">اعد إرسال</string>
    <string name="resend_in">اعد إرسال فى</string>
    <string name="teacher">انا مدرس</string>
    <string name="student">انا طالب</string>
    <string name="add_photo">اضف صورتك</string>
    <string name="student_name">إسم الطالب</string>
    <string name="welcome_again">اهلا بعودتك مرة اخرى</string>
    <string name="stage">المرحلة</string>
    <string name="stage2">المرحلة التعليمية</string>
    <string name="father_phone">هاتف ولي الامر</string>
    <string name="address">العنوان</string>
    <string name="school_name">إسم المدرسة</string>
    <string name="save">حفظ البيانات</string>
    <string name="choose_stage">إختر المرحلة التعليمية</string>
    <string name="add_video">أضف فيديو تعريفي</string>
    <string name="class1">الصف</string>
    <string name="choose_class">إختر الصف</string>
    <string name="password">كلمة المرور</string>
    <string name="password_short">كلمة المرور قصيرة جدا</string>
    <string name="phone_exist">رقم الهاتف او البريد الالكتروني موجود من قبل</string>
    <string name="email_exist">البريد الإلكتروني موجود من قبل</string>
    <string name="user_not_exist">المستخدم غير موجود</string>
    <string name="library">المكتبة</string>
    <string name="live">مباشر</string>
    <string name="my_rate">تقييمي</string>
    <string name="explain_education">شرح كامل لمراحل التعليم</string>
    <string name="effictive_edu">نظام التعليم التفاعلي</string>
    <string name="choose_edu_system">إختر نظامك التعليمي...</string>
    <string name="read_in_lib">إقرأ في المكتبة العامة</string>
    <string name="all_edu_stage">جميع مراحل التعليم</string>
    <string name="department">القسم</string>
    <string name="choose_department">إختر القسم</string>
    <string name="no_subject">لا يوجد مواد لعرضها</string>
    <string name="update_profile">تحديث المعلومات الشخصية</string>
    <string name="mol5s_tqarir">ملخص التقارير العامة</string>
    <string name="charge_details">تفاصيل رصيدي</string>
    <string name="friend_chat">مراسلة اصدقائي</string>
    <string name="teacher_chat">مراسلة المدرسين</string>
    <string name="win_friend_invitation">إكسب بدعوه الاصدقاء</string>
    <string name="service_help">خدمات المساعدة</string>
    <string name="company_info">معلومات عن الشركة</string>
    <string name="complain">الشكاوي والاقتراحات</string>
    <string name="videos">فيديوهات</string>
    <string name="notes">المذكرات</string>
    <string name="live_lesson">دروس مباشرة</string>
    <string name="quiz">أسئلة</string>
    <string name="egp">ج.م</string>
    <string name="no_summary">لا يوجد ملخصات لعرضها</string>
    <string name="no_videos">لا توجد فيديوهات لعرضها</string>
    <string name="no_pdf">لا توجد مذكرات لعرضها</string>
    <string name="no_books">لا توجد مراجع لعرضها</string>
    <string name="view">مشاهدة</string>
    <string name="intro_vid">قم برفع الفيديو التعريفي الخاص بك</string>
    <string name="teacher_name">إسم المدرس</string>
    <string name="no_rates">لا توجد تقييمات</string>
    <string name="student_chat">المحادثات</string>
    <string name="job_degree">الدرجة الوظيفية</string>
    <string name="degree">الدرجة</string>
    <string name="from">من:</string>
    <string name="to">إلى:</string>
    <string name="show_results">عرض الاجابات</string>
    <string name="no_exams">لا توجد إختبارات لعرضها</string>
    <string name="no_teacher_to_show">لا يوجد مدرسين لعرضهم</string>
    <string name="video2">فيديو تعريفى</string>
    <string name="show_groups">عرض المجموعات</string>
    <string name="no_groups_to_show">لا يوجد مجموعات لعرضها</string>
    <string name="group_name">إسم المجموعة :</string>
    <string name="max_users">اقصي عدد بالمجموعة</string>
    <string name="group_time">مواعيد المجموعة</string>
    <string name="reserve_group">حجز المجموعة</string>
    <string name="reserve_done">تم الحجز في المجموعة</string>
    <string name="student2">طالب</string>
    <string name="name">الإسم</string>
    <string name="subject">الموضوع</string>
    <string name="message">الرسالة</string>
    <string name="send">إرسال</string>
    <string name="suc">تم بنجاح!</string>
    <string name="update">تعديل البيانات</string>
    <string name="update_photo">تعديل صورتك</string>
    <string name="add_group">إضافة مجموعة</string>
    <string name="subject2">المادة</string>
    <string name="group_name2">إسم المجموعة</string>
    <string name="max_student">أقصى عدد للطلاب بالمجموعة</string>
    <string name="group_date">موعد المجموعة</string>
    <string name="save2">حفظ</string>
    <string name="choose_subject">إختر المادة</string>
    <string name="live2">لايف</string>
    <string name="delete">حذف</string>
    <string name="my_student">طلابي</string>
    <string name="my_group">مجموعاتي</string>
    <string name="my_tests">إختباراتي</string>
    <string name="show">مشاهدة</string>
    <string name="no_student">لا يوجد طلاب لعرضها</string>
    <string name="create_room">إنشاء بث مباشر</string>
    <string name="title">العنوان</string>
    <string name="price">السعر</string>
    <string name="subject3">الموضوع</string>
    <string name="duration_minute">المدة (دقيقة)</string>
    <string name="wait2">إنتظر قليلا.....</string>
    <string name="live_stream">بث مباشر</string>
    <string name="join">إنضم</string>
    <string name="no_stream">لا يوجد بث مباشر الان</string>
    <string name="live_now">مباشر الان</string>
    <string name="create_group_chat_room">إنشاء محادثة للمجموعات</string>
    <string name="create_student_chat">إنشاء محادثة للطلاب</string>
    <string name="create_chat">إنشاء محادثة</string>
    <string name="description">الوصف</string>
    <string name="no_student_to_create_group">لا يوجد طلاب لإنشاء محادثة</string>
    <string name="chats">المحادثات</string>
    <string name="type_a_message">إكتب رسالتك....</string>
    <string name="parent">انا ولي امر</string>
    <string name="my_sons">أبنائي</string>
    <string name="no_sons_to_show">لا يوجد ابناء لعرضها</string>
    <string name="search_name_phone">إبحث بالبريد الإلكتروني او رقم الهاتف</string>
    <string name="search2">بحث</string>
    <string name="no_search_result">لا توجد نتائج للبحث</string>
    <string name="add">إضافة</string>
    <string name="request_sent">تم ارسال طلب الصداقة من قبل</string>
    <string name="reqest_sent_pls_wait">لقد تم إرسال طلب الصداقة برجاء انتظار الموافقة علية</string>
    <string name="new_request">طلب متابعة جديد</string>
    <string name="no_notification">لا توجد إشعارات لعرضها</string>
    <string name="rate">التقييم</string>
    <string name="Test2">الإختبارات</string>
    <string name="course_center">انا مركز كورسات </string>
    <string name="center_name">اسم المركز</string>
    <string name="centers_group">مراكز الكورسات</string>
    <string name="teacher_price">سعر المدرس</string>
    <string name="discount_value">قيمة الخصم</string>
    <string name="teacher_price_after_disount">سعر المدرس بعد الخصم</string>
    <string name="admin_precent">نسبة الادمن</string>
    <string name="remove">حذف</string>
    <string name="detials">تفاصيل</string>
    <string name="number_of_teacher_in_group">عدد المدرسين فى المجموعة</string>
    <string name="group_price">سعر المجموعة</string>
    <string name="g">ج.م</string>
    <string name="questions_bank">بنك الاسئلة</string>
    <string name="my_reservation">حجوزاتي</string>
    <string name="centers">المراكز</string>
    <string name="joined_centers">المراكز المشترك فيها</string>
    <string name="av_teacher">المدرسين المتاحين</string>
    <string name="follow_teacher">المدرسين المتابعين</string>
    <string name="center_group">مجموعات المركز</string>
    <string name="share">مشاركة</string>
    <string name="no_centers">لا توجد مراكز لعرضها</string>
    <string name="selected">تم تحديد</string>
    <string name="teacher_num">عدد المدرسين</string>
    <string name="teacher_in_groups">عرض مدرسين المجموعة</string>
    <string name="money_before_discount">السعر قبل الخصم</string>
    <string name="follow">متابعة</string>
    <string name="choose">إختر</string>
    <string name="ch_time">إختر الميعاد المناسب</string>
    <string name="book_now">إحجز الان</string>
    <string name="already_booked">تم الحجز من قبل</string>
    <string name="followed">تم المتابعة</string>
    <string name="honor_board">لوحة الشرف</string>
    <string name="summary">الملخصات</string>
    <string name="final_teacher_price">السعر النهائي للمدرس</string>
    <string name="add_teacher">اضافة مدرس</string>
    <string name="edit">تعديل</string>
    <string name="teachers">المدرسين</string>
    <string name="must_big">يجب ان يكون اكبر من صفر</string>
    <string name="select_teacher">اختر المدرس</string>
    <string name="select_stage">اختر المرحله</string>
    <string name="no_group">لا يوجد جروبات</string>
    <string name="search_by_email">ابحث عن طريق البريد الالكتروني</string>
</resources>