<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/add_group"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/edtname"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_gray"
            android:hint="@string/group_name2"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="14sp" />


        <Button
            android:id="@+id/btnAccept"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/small_gradient3"
            android:text="@string/add"
            android:textColor="@color/white"

            />


    </LinearLayout>
</layout>
