<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >
    <data>
        <variable
            name="lang"
            type="String" />
        <variable
            name="model"
            type="com.t3leem_live.models.CreateRoomModel" />

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".uis.module_student.activity_student_teachers.StudentTeachersActivity"
        android:background="@color/white"
        >
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                >
                <LinearLayout
                    android:id="@+id/llBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    >
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_left_arrow"
                        app:tint="@color/color1"
                        android:padding="3dp"
                        android:clickable="false"
                        android:longClickable="false"
                        android:rotation='@{lang.equals("ar")?180:0}'
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textSize="15sp"
                        android:text="@string/back"
                        android:textColor="@color/color1"
                        android:clickable="false"
                        android:longClickable="false"
                        />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray4"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/color1"
                    android:fontFamily="@font/font"
                    android:text="@string/create_room"
                    android:textSize="28sp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"

                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_gray"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:hint="@string/title"
                    android:singleLine="true"
                    android:text="@={model.title}"
                    error="@{model.error_title}"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subject3"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"

                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_gray"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:hint="@string/subject3"
                    android:singleLine="true"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:text="@={model.subject}"
                    error="@{model.error_subject}"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"

                    />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_gray"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:hint="@string/price"
                    android:singleLine="true"
                    android:inputType="number"
                    android:text="@={model.price}"
                    error="@{model.error_price}"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/duration_minute"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"

                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_gray"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:hint="@string/duration_minute"
                    android:singleLine="true"
                    android:inputType="number"
                    android:text="@={model.duration}"
                    error="@{model.error_duration}"
                    />

                <Button
                    android:id="@+id/btnCreateRoom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_color1"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/create_room"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"


                    />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>
